# MultiAlarm

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Alarm.cpp  Alarm.h  AlarmWidget.cpp  AlarmWidget.h  AlarmWidget.ui  CMakeLists.txt  DesktopWidget.cpp  DesktopWidget.h  LogiLED.cpp  LogiLED.h  Main.cpp  MainWindow.ui  MultiAlarm.cpp  MultiAlarm.h  NewAlarmDialog.cpp  NewAlarmDialog.h  NewAlarmDialog.ui  Utils.cpp  Utils.h  readme.md  resources.rc.in
.github/: FUNDING.yml
installer/: script.iss.in
rsc/: resources.qrc
